fix pge cutoff issue

--- a/src/App/components/PageHeader/PageHeader.module.css
+++ b/src/App/components/PageHeader/PageHeader.module.css
@@ -8,10 +8,13 @@
     height: 56px;
     border-bottom: 1px solid var(--navbar-border);
 
+}
+.fixed{
     position: fixed;
     top: 0;
     z-index: 3
     ;
+
 }
 
 .branch {
